# core-cartographer

./: .env.example  .gitignore  DEPLOYMENT.md  GUI_PREVIEW.txt  GUI_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_PLAN_DETAILED.md  MIGRATION_PRD.md  MIGRATION_STATUS.md  POST_MIGRATION_COMPLETION_REPORT.md  POST_MIGRATION_TASKS.md  PROMPT_IMPROVEMENTS.md  QUICKSTART.md  README.md  README_MIGRATION.md  SETUP_COMPLETE.md  TEST_MATRIX.md  USER_GUIDE.md  WEEK2_COMPLETE.md  WEEK_4_COMPLETE.md  WEEK_5_COMPLETE.md  WEEK_6_COMPLETE.md  check_implementation.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run-manual.sh  setup.sh  start-backend.sh  start-frontend.sh  start-gui.sh  test_language_detection.py
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  requirements.txt
backend/src/api/: main.py  (+2 more)
examples/: en-GB _neosurf_.docx  en-MC _giftmecrypto_.docx
frontend/: .dockerignore  .env.local.example  Dockerfile  Dockerfile.prod  package-lock.json  package.json  tailwind.config.ts
instructions/: extraction_instructions.md
instructions/archive/: extraction_instructions_v1.md
nginx/: nginx.conf
nginx/ssl/: .gitkeep
src/core_cartographer/: __init__.py  cli.py  config.py  cost_estimator.py  exceptions.py  extractor.py  file_utils.py  gui.py  icons.py  logging_config.py  models.py  parser.py  styles.css
templates/: client_rules_example.js  client_rules_example_condensed.js  code_auditor.js  guidelines_example.md  guidelines_example_condensed.md
tests/: __init__.py  test_config.py  test_cost_estimator.py  test_file_utils.py  test_parser.py
uiref/: README.md  colors.md  components.md  logo.md  navigation.md  typography.md
(+48 files in other folders)
