[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-cartographer"
version = "0.1.0"
description = "Extract glossaries and guidelines from copy documents using Claude"
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.11"
keywords = ["llm", "glossary", "guidelines", "localization", "translation", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[project.scripts]
cartographer = "core_cartographer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Icons contain SVG strings that are inherently long
"src/core_cartographer/icons.py" = ["E501"]
# Prompt templates are more readable as single strings
"src/core_cartographer/extractor.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
